@@ -900,6 +900,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8984. Move replication queues related methods in FSNamesystem to
     BlockManager. (wheat9)
 
+    HDFS-9019. Adding informative message to sticky bit permission denied
+    exception. (xyao)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
